---------------------------------------------------------------------------------------------------
Version: 4.1.0
Date: 2020.11.xx
  Info:
    - Updated for Factorio version 1.1.0
---------------------------------------------------------------------------------------------------
Version: 4.0.2
Date: 2020.09.04
  Bugfixes:
    - Fixed an issue that prevented salting recipes from beeing unlocked with crystallology techs
---------------------------------------------------------------------------------------------------
Version: 4.0.1
Date: 2020.08.31
  Changes:
    - Renamed technology "crystallology-x" to "omnitech-crystallology-x"
    - Renamed technology "crystallonics-y" to "omnitech-crystallonics-x"
    - Renamed technology "pseudoliquid-amorphous-crystal-x" to 
    - "omnitech-pseudoliquid-amorphous-crystal-x"
---------------------------------------------------------------------------------------------------
Version: 4.0.0
Date: 2020.08.22
  Info:
    - Updated for Factorio version 1.0.0
  Bugfixes:
    - Fixed crystallonics tech not always requiring its previous tier
    - Fixed cases of incorrect icon generation
---------------------------------------------------------------------------------------------------
Version: 3.18.8
Date: 2020.08.13
  Bugfixes:
    - Fixed crystallonics tech starting with green instead of blue science
---------------------------------------------------------------------------------------------------
Version: 3.18.7
Date: 2020.08.07
  Bugfixes:
    - Fixed quartz crystals omnitraction outputting quarz instead of silicon plates with pure Bob
    - Multiple recipe subgroup and order fixes
    - Fixed cobalt crystal recipes getting added even with cobalt ore beeing disabled
---------------------------------------------------------------------------------------------------
Version: 3.18.6
Date: 2020.07.15
  Features:
    - Added Upgrade Planner support
  Bugfixes:
    - Fixed Burner Omniplant localisation