@@ -99,7 +99,7 @@ crystal-reactor=Back on earth, after a meteor with a mysterious substance landed
 crystallomnizer=Crystallomnizer Mk __1__
 crystal=__1__ Crystal
 crystal-powder=__1__ crystal powder
-advanced-crystal-powder=Advanced __1__
+crystalline=Crystalline __1__
 omnide-salting= __1__ Salting
 ore-solvation=__1__-Omnide solution
 crystal-omnitraction=__1__
